--- a/index.html
+++ b/index.html
@@ -2,34 +2,57 @@
 <html>
 <head>
   <meta charset="utf-8">
+	<link rel= "stylesheet" href="styles.css"/>
   <title>Welcome to Outnumbered Momma!</title>
-</head>
-<body style="background-color: blue;">
-  <h1 style="font-family: fantasy; font-size: 300%; color: palevioletred;">The Outnumbered Momma</h1>
-  <h2 style="font-family: 'Brush Script MT', cursive;color:aqua">Simple Ideas for the Busy Mom</h2>
-</body>
+<style>
+	.image-container{
+		text-align: center;
+		margin-top: 20px;
+	}
+	.image-container img{
+		margin:0 10px;	
+	}
 	
+	.centered-text{
+		text-align: center;
+		font-size:100%;
+		padding-bottom:50px;
+	}
+	
+	footer p {
+		font-size: 12px;
+		margin: 0;
+	}
+	</style>
+</head>
 <body>
-	<div id="container" style="width:1350px;background-color:aqua;height:600px;margin:0 auto;">
-	<header></header>
+<header>
+  <h1>"The Outnumbered Momma"</h1>
+  <h2>"Simple Ideas for the Busy Mom"</h2>
+</header>	
 		
-<nav style="font-size: 140%; font-family: fantasy; background-color: palevioletred;">
-  <a href="#recipes" style="margin-right: 20px;" title="Family-Friendly Recipes">Recipes</a>
-  <a href="#baby-enrichment" style="margin-right: 20px;" title="Simple Baby Learning">Baby Enrichment</a>
-  <a href="#preschool-activities" style="margin-right: 20px;" title="Teach your child through play">Preschool Activities</a>
-  <a href="#mom-self-care" style="margin-right: 20px;" title="Mommy Me-Time">Mom Self-Care</a>
-  <a href="#budget-travel" style="margin-right: 20px;" title="Travel even on a Budget">Budget Travel</a>
+<nav>
+  <a href="#recipes" title="Family-Friendly Recipes">Recipes</a>
+  <a href="#baby-enrichment" title="Simple Baby Learning">Baby Enrichment</a>
+  <a href="#preschool-activities" title="Teach your child through play">Preschool Activities</a>
+  <a href="#mom-self-care" title="Mommy Me-Time">Mom Self-Care</a>
+  <a href="#budget-travel" title="Travel even on a Budget">Budget Travel</a>
+<a href="#relationships" title="Building Relationships">Relationships</a>
 </nav>
-
-<main style="display: flex; justify-content: center;">
-  <img src="images/fishing.jpg" alt="fishing" style="width:250px; margin:0 auto;" />
-  <img src="images/space.jpg" alt="space" style="width:250px; margin:0 auto;" />
-  <img src="images/ravioli.jpg" alt="fun in the kitchen" style="width:250px; margin:0 auto;" />
-</main>
-
-<h3 style="font-family:fantasy; font-size: 200%; color: palevioletred;text-align:center">Welcome to The Outnumbered Momma!</h3>
-<p style="text-align:center; font-size:150%; font-family:arial;color:blue"><i>I’m thrilled to have you here. This is your go-to place for family-friendly recipes, simple learning activities, tips on balancing motherhood, and frugal travel ideas. Whether you’re looking for delicious meals, fun ways to engage your little ones, or advice on managing the beautiful chaos of motherhood, you’ve come to the right place. Let’s venture into this journey together!</i></p>	
+	
+<div class="image-container">
+    <img src="images/fishing.jpg" alt="fishing" width="200" height="300"/>
+    <img src="images/space.jpg" alt="space" width="200" height="300"/>
+    <img src="images/ravioli.jpg" alt="fun in the kitchen" width="200" height="300"/>
 </div>
-	<footer><p><small>&copy; 2024 April Sharer.All rights reserved.</small></p></footer>
-</body>
+	
+<div>
+<h3>Welcome to The Outnumbered Momma!</h3>
+		
+<p class="centered-text"> I’m thrilled to have you here. This is your go-to place for family-friendly recipes, simple learning activities, tips on balancing motherhood, and frugal travel ideas. Whether you’re looking for delicious meals, fun ways to engage your little ones, or advice on managing the beautiful chaos of motherhood, you’ve come to the right place. Let’s venture into this journey together!</p>	
+</div>
+<footer>
+		<p> &copy; 2024 April Sharer.All rights reserved.</p>
+	</footer>
+</body> 
 </html>
