--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 <header>
-  <h1>"The Outnumbered Momma"</h1>
+  <h1>The Outnumbered Momma</h1>
   <h2>"Simple Ideas for the Busy Mom"</h2>
 </header>	
 		
