--- a/index.html
+++ b/index.html
@@ -1,56 +1,58 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
-	<link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Satisfy&family=Thasadith:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
   <title>Welcome to Outnumbered Momma!</title>
-<style>
-	.image-container{
-		text-align: center;
-		margin-top: 20px;
-	}
-	.image-container img{
-		margin:0 10px;	
-	}
-	
-	.centered-text{
-		text-align: center;
-		font-size:100%;
-		padding-bottom:50px;
-	}
-	
-	footer p {
-		font-size: 12px;
-		margin: 0;
-	}
-	</style>
-</head>
-<body>
-<header>
-  <h1>The Outnumbered Momma</h1>
-  <h2>"Simple Ideas for the Busy Mom"</h2>
-</header>	
-		
+ 
+  <header>
+    <h1>&nbsp; The Outnumbered Momma</h1>
+    <h2>&nbsp; "Simple Ideas for the Busy Mom"</h2>
+  </header>  
+
 <nav>
-  <a href="#recipes" title="Family-Friendly Recipes">Recipes</a>
-  <a href="#baby-enrichment" title="Simple Baby Learning">Baby Enrichment</a>
-  <a href="#preschool-activities" title="Teach your child through play">Preschool Activities</a>
-  <a href="#mom-self-care" title="Mommy Me-Time">Mom Self-Care</a>
-</nav>
+    <a href="index.html" title="home">Home</a>  
+    <a href="recipes.html" title="Family-Friendly Recipes">Recipes</a>
+    <a href="#learning activities" title="Teach your child through play">Learning Activities</a>
+    <a href="#money saving tips" title="Save $$$">Money-Saving Tips</a>
+    <a href="contact.html" title="Contact Us!">Contact</a>
+  </nav>
+
+<div id="container">
+  <article>
+      <img src="images/fishing.jpg" alt="fishing" width="220" height="300"/>
+      <img src="images/space.jpg" alt="space" width="220" height="300"/>
+      <img src="images/ravioli.jpg" alt="fun in the kitchen" width="220" height="300"/>
+    <h3>Welcome to The Outnumbered Momma!</h3>  
+    <p> I’m thrilled to have you here. This is your go-to place for family-friendly<br>
+        recipes, simple learning activities, tips on balancing motherhood, and frugal<br>
+        travel ideas. Whether you’re looking for delicious meals, fun ways to engage your<br>
+        little ones, or advice on managing the beautiful chaos of motherhood, you’ve come to <br>
+    the right place. Let’s venture into this journey together!</p>  
+  </article>
+	</div>
+<div id="about-me">
+    <h2>Nice to meet you!</h2>
 	
-<div class="image-container">
-    <img src="images/fishing.jpg" alt="fishing" width="200" height="300"/>
-    <img src="images/space.jpg" alt="space" width="200" height="300"/>
-    <img src="images/ravioli.jpg" alt="fun in the kitchen" width="200" height="300"/>
+    <aside class="about-content">
+        <p style="color:white">
+            Hey there momma! I'm April, a busy mom of 3 young boys, navigating the<br>
+            beautiful chaos of family life. Here, you'll find tips, recipes, and<br>
+            ideas to make life a bit easier and more enjoyable. My goal is to give<br>
+            you <strong>simple</strong> and <strong>affordable</strong> ideas to help ease the chaos<br>
+            and create lasting memories with your littles.<br><img src="images/solopic.jpg" alt="About Me">
+        </p>
+        
+    </aside>
 </div>
-	
-<div>
-<h3>Welcome to The Outnumbered Momma!</h3>
-		
-<p class="centered-text"> I’m thrilled to have you here. This is your go-to place for family-friendly recipes, simple learning activities, tips on balancing motherhood, and frugal travel ideas. Whether you’re looking for delicious meals, fun ways to engage your little ones, or advice on managing the beautiful chaos of motherhood, you’ve come to the right place. Let’s venture into this journey together!</p>	
-</div>
-<footer>
-		<p> &copy; 2024 April Sharer.All rights reserved.</p>
-	</footer>
-</body> 
+  
+  <footer>
+    <p>&copy; 2024 The Outnumbered Momma. All rights reserved.</p>
+  </footer>
+</body>
 </html>
+
