--- a/recipes.html
+++ b/recipes.html
@@ -54,10 +54,10 @@
 		
 <nav>
 <a href="index.html" title="home">Home</a> 
-  <a href="#recipes" title="Family-Friendly Recipes">Recipes</a>
-  <a href="#learning activities" title="Learning Activities">Learning Activities</a>
-  <a href="#money saving tips" title="Money Saving Tips">Money Saving Tips</a>
-  <a href="#contact" title="Contact">Contact</a>
+  <a href="recipes.html" title="Family-Friendly Recipes">Recipes</a>
+  <a href="learningfun.html" title="Learning Activities">Learning Activities</a>
+  <a href="moneysaving.html" title="Money Saving Tips">Money Saving Tips</a>
+  <a href="contact.html" title="Contact">Contact</a>
 </nav>	
 
 	<br>
@@ -68,7 +68,7 @@
     <img src="images/lemons.jpg" alt="lemonade" width="200" height="300"/>
 		
 	<map name="imagemap">
-		<area shape="rect" coords="133,48,214,249" alt="more recipes" href="recipelist.html">
+		<area shape="rect" coords="133,48,214,249" alt="more recipes" href="learning.html">
 </map>
 		</div>
 <div class="container">
