--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,8 @@
     <nav>
         <a href="../index.html" title="home">Home</a>  
         <a href="../recipes.html" title="Family-Friendly Recipes">Recipes</a>
-        <a href="#learning activities" title="Teach your child through play">Learning Activities</a>
-        <a href="#money saving tips" title="Save $$$">Money-Saving Tips</a>
+        <a href="learningfun.html" title="Teach your child through play">Learning Activities</a>
+        <a href="moneysaving.html" title="Save $$$">Money-Saving Tips</a>
         <a href="../contact.html" title="Contact Us!">Contact</a>
     </nav>
 
