--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
+	<body>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Satisfy&family=Thasadith:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <title>Welcome to Outnumbered Momma!</title>
- 
+
   <header>
     <h1>&nbsp; The Outnumbered Momma</h1>
     <h2>&nbsp; "Simple Ideas for the Busy Mom"</h2>
@@ -21,7 +22,7 @@
     <a href="moneysaving.html" title="Save $$$">Money-Saving Tips</a>
     <a href="contact.html" title="Contact Us!">Contact</a>
   </nav>
-
+</head>
 <div id="container">
   <article>
       <img src="images/fishing.jpg" alt="fishing" width="220" height="300"/>
