--- a/moneysaving.html
+++ b/moneysaving.html
@@ -28,7 +28,6 @@
 </nav>	
 
 <h3>Money Saving Tips</h3>	
-<h3 style="font-size: 1.2em;" class="clearfix">&#128153; The Outnumbered Momma &#128153;</h3>
 
 <div class="container">
   <div class="item">
@@ -46,7 +45,7 @@
 	 <div class="item">
 		 <img src="images/elf.jpg" alt="Rewards">
 		 <h4>Use Cashback and Rewards</h4>
-    <p>Once you’ve mastered your monthly budget, you can take advantage of a cashback or rewards credit card. Many cards offer 2% or more back on all purchases! I personally use my credit card bills to fund all of my Amazon purchases, since I can use my credit card points to buy. Only do this if you are sure you can pay off the balance each month, because interest rates are way too high! </p>
+    <p>Once you’ve mastered your monthly budget, you can take advantage of a cashback or rewards credit card. Many cards offer 2% or more back on all purchases! I personally use my credit card bills to fund all of my Amazon purchases, since I can use my credit card points to buy. Only do this if you are sure you can pay off the balance each month, because interest rates are way too high!&nbsp;&nbsp;&nbsp;&nbsp;</p>
   </div>
   <div class="item">
 	  <img src="images/box.jpg" alt="Look at Your Statements Often">
