--- a/contact.html
+++ b/contact.html
@@ -14,14 +14,15 @@
     <header>
         <h1>The Outnumbered Momma</h1>
         <h2>"Simple Ideas for the Busy Mom"</h2>
+
     </header>  
 
     <nav>
-        <a href="../index.html" title="home">Home</a>  
-        <a href="../recipes.html" title="Family-Friendly Recipes">Recipes</a>
+        <a href="index.html" title="home">Home</a>  
+        <a href="recipes.html" title="Family-Friendly Recipes">Recipes</a>
         <a href="learningfun.html" title="Teach your child through play">Learning Activities</a>
         <a href="moneysaving.html" title="Save $$$">Money-Saving Tips</a>
-        <a href="../contact.html" title="Contact Us!">Contact</a>
+        <a href="contact.html" title="Contact Us!">Contact</a>
     </nav>
 
     <h3>Questions? Ideas? Let's Talk!</h3>
@@ -50,24 +51,12 @@
 
             <input type="submit" value="Submit">
         </form>
-		<audio controls>
-        <source src="sound_effect_2.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
+		
     </div>
 <div id="about-me">
- <canvas id="myCanvas" width="400" height="100">
-        Your browser does not support the HTML canvas tag.
-    </canvas>
 
-    <script>
-        var c = document.getElementById("myCanvas");
-        var ctx = c.getContext("2d");
 
-        ctx.font = "30px 'Satisfy', cursive";
-        ctx.textAlign = "center"; 
-        ctx.fillText("Talk Soon!", c.width / 2, 50); 
-    </script>
+ 
     
 </div>
 	
