--- a/recipes.html
+++ b/recipes.html
@@ -7,44 +7,6 @@
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Satisfy&family=Thasadith:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="styles.css">
   <title>Welcome to Outnumbered Momma!</title>
- 
-	<style>
-	.image-container{
-		text-align: center;
-		margin-top: 5px;
-	}
-	.image-container img{
-		margin:0 10px;	
-	}
-	
-	.centered-text{
-		text-align: center;
-		font-size:100%;
-		padding-bottom:50px;
-	}
-	  .heading-container h4 {
-         text-align: left;
-         margin-top: 0; 
-         margin-bottom: 10px;
-		  float:right;
-        }
-
-        .heading-container img {
-            display: block; 
-            width: 100%; 
-            height: auto; 
-        }
-	
-	footer p {
-		font-size: 12px;
-		margin: 0;
-	}
-			 .container {
-            padding: 20px;                 
-            background-color: #f9f9f9;    
-        }
-	</style>
-	
 </head>
 <body>
 <header>
@@ -60,99 +22,48 @@
   <a href="contact.html" title="Contact">Contact</a>
 </nav>	
 
-	<br>
+	<h3>Fast Family-Friendly Recipes </h3>	
 
-	<div class="image-container">
-    <img src="images/kitchen.jpg" alt="kitchen" width="200" height="300"usemap="#imagemap"/>
-    <img src="images/tacos.jpg" alt="tacos" width="200" height="300"/>
-    <img src="images/lemons.jpg" alt="lemonade" width="200" height="300"/>
-		
-	<map name="imagemap">
-		<area shape="rect" coords="133,48,214,249" alt="more recipes" href="learning.html">
-</map>
-		</div>
 <div class="container">
-  <h3>Easy Dinners</h3>
-  <ul>
-    <li>Queso Chicken Bowls&#128571</li>
-    <li>Cajun Chicken Bake&#128077</li>
-    <li>Mississippi Roast&#128154</li>
-    <li>Buffalo Chicken Casserole&#128076</li>
-    <li>Sesame Chicken</li>
-    <li>White Chicken Chili</li>
-    <li>Baked Ziti</li>
-    <li>Chili Dogs&#128153</li>
-    <li>BBQ Brisket</li>
-    <li>Everything Salmon</li>
-    <li>Chinese Chicken Salad&#128155</li>
-  </ul>
-
-  <h3>Snacks and Treats</h3>
-  <ul>
-    <li>Protein Bites</li>
-    <li>Apple Nachos</li>
-    <li>Pumpkin Twists</li>
-    <li>Cake Pops</li>
-    <li>Pudding Cups</li>
-    <li>Cobbler</li>
-    <li>Cake Mix Cookies</li>
-  </ul>
-	<h3>Recipe of the Day</h3>
-	<button type="button"
-onclick="document.getElementById('demo').innerHTML = Date()">
-Click for Today's Date.</button>
-	<p id="demo"></p>
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/Y3YEtkKbmuI?si=AN803IgTrkUGU1dx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-	<h3>Recipe Adjustments-I got you!</h3>
-	<table>
-    <caption>How to Double or Halve a Recipe</caption>
-    <thead>
-        <tr>
-            <th>Ingredient</th>
-            <th>Original Amount</th>
-            <th>Doubled Amount</th>
-            <th>Halved Amount</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>Flour</td>
-            <td>2 cups</td>
-            <td>4 cups</td>
-            <td>1 cup</td>
-        </tr>
-        <tr>
-            <td>Sugar</td>
-            <td>1 cup</td>
-            <td>2 cups</td>
-            <td>½ cup</td>
-        </tr>
-        <tr>
-            <td>Butter</td>
-            <td>½ cup</td>
-            <td>1 cup</td>
-            <td>¼ cup</td>
-        </tr>
-        <tr>
-            <td>Milk</td>
-            <td>1 cup</td>
-            <td>2 cups</td>
-            <td>½ cup</td>
-        </tr>
-        <tr>
-            <td>Eggs</td>
-            <td>2 eggs</td>
-            <td>4 eggs</td>
-            <td>1 egg</td>
-        </tr>
-    </tbody>
-</table>
+  <div class="item">
+    <img src="images/cajun chicken.jpg" alt="5 Ingredient Cajun Chicken">
+	  <h4>5 Ingredient Cajun Chicken</h4>
+    <p>This is my go-to rainy day activty! All you need for this one is a spin-mop bucket, cocoa powder, 9x13 pan, and toy cars. To prep the activity just sprinkle cocoa powder on the bottom of your pan and stir in a tablespoon of water at a time to make this taste-safe mud your desired consistency. Then, fill your spin-mop bucket a quarter full of water and you're good to go. For this activity kids will practice fine motor skills and problem solving by creating this open-ended muddy carwash for their toy cars. My boys race their cars in "mud" and then pass the car off to the "car washer" who dunks the dirty car in the mop bucket, and then spins it dry!</p>
+  </div>
+ 
+  <div class="item">
+	  
+    <img src="images/everything salmon.jpg" alt="Everything Salmon">
+	  <h4>Everything Salamon</h4>
+    <p>This is hands-down been the most impactful way to cut down my family's spending. Having a meal plan each week helps you only buy what you need at the grocery store, and avoid eating out just out of desperation. Now don't get me wrong, I love the experience of eating out with my family and trying something new, but desperately stopping at Chic-Fil-A because there's nothing to cook at home, adds up quick. Having a meal plan for each week is a great strategy to save money at the grocery store, and avoid unnecessary spending.Plan your resturant visits intentially for the experience, not out of desperation!</p>
+  </div>
+	 <div class="item">
+		 <img src="images/queso chicken.jpg" alt="Burito Bowls">
+		 <h4>Burito Bowls</h4>
+    <p>Once you’ve mastered your monthly budget, you can take advantage of a cashback or rewards credit card. Many cards offer 2% or more back on all purchases! I personally use my credit card bills to fund all of my Amazon purchases, since I can use my credit card points to buy. Only do this if you are sure you can pay off the balance each month, because interest rates are way too high!&nbsp;&nbsp;&nbsp;&nbsp;</p>
+  </div>
+  <div class="item">
+	  <img src="images/salad.jpg" alt="Chinese Chicken Salad">
+	  <h4>Chinese Chicken Salad</h4>
+    
+    <p>Whether you primarily use a debit card, or credit card- check your accounts often. This will help you monitor your spending, and identify subscriptions you may want to cancel. It is also a great way to catch fraudulent behavior early on. I like to check my accounts weekly to make sure I’m on track to stay on budget for the month.If I'm overspending, I need to know while there is still time in the month to adjust! </p>
+  </div>
+  <div class="item">
+	  
+    <img src="images/monteray.jpg" alt="Southwest Monterays">
+	  <h4>Southwest Monterays</h4>
+    <p>When was the last day that you didn’t make a single purchase? Having online shopping at our fingertips makes it tempting to buy something as soon as we think of it. What if you just left it in your cart and re-evaluated at the end of the week? Start off with one day a week that you won’t need to make any essential purchases and go the whole day without spending. Challenge yourself to increase your number of “no-spend” days per month. </p>
+  </div>
+	
+	 <div class="item">
+    <img src="images/pancake.jpg" alt="Pancakes">
+	  <h4>Mickey Mouse Pancakes</h4>
+    <p>Stop wasting money on buying brand new everything. Check out your local thrift store and you might be amazed with all the great finds that cost a fraction of what you would regulary spend. This does not just apply to clothes, the next time you're out shopping for something check the thrift store first!The satisfaction of a good find is such a great feeling. The environment, and your wallet will thank you!</p>
+  </div>
 </div>
 
-
 <footer>
-		<p> &copy; 2024 April Sharer.All rights reserved.</p>
-	</footer>
+  <p>&copy; 2024 April Sharer. All rights reserved.</p>
+</footer>
 </body> 
 </html>
-
