--- a/learningfun.html
+++ b/learningfun.html
@@ -16,12 +16,15 @@
 </header>	
 		
 <nav>
-  <a href="index.html" title="home">Home</a> 
-  <a href="recipes.html" title="Family-Friendly Recipes">Recipes</a>
-  <a href="learningfun.html" title="Learning Activities">Learning Activities</a>
-  <a href="moneysaving.html" title="Money Saving Tips">Money Saving Tips</a>
-  <a href="contact.html" title="Contact">Contact</a>
-</nav>	
+  <div class="hamburger" id="hamburger">&#9776;</div> <!-- Hamburger icon -->
+  <div class="nav-links" id="nav-links">
+    <a href="index.html" title="home">Home</a>
+    <a href="recipes.html" title="Family-Friendly Recipes">Recipes</a>
+    <a href="learningfun.html" title="Learning Activities">Learning Activities</a>
+    <a href="moneysaving.html" title="Money Saving Tips">Money Saving Tips</a>
+    <a href="contact.html" title="Contact">Contact</a>
+  </div>
+</nav>
 	
 <h3>Learning Activities</h3>	
 
