--- a/recipes.html
+++ b/recipes.html
@@ -15,6 +15,8 @@
 </header>	
 		
 <nav>
+	<div class="hamburger" id="hamburger">&#9776;</div> <!-- Hamburger icon -->
+  <div class="nav-links" id="nav-links">
 <a href="index.html" title="home">Home</a> 
   <a href="recipes.html" title="Family-Friendly Recipes">Recipes</a>
   <a href="learningfun.html" title="Learning Activities">Learning Activities</a>
