--- a/contact.html
+++ b/contact.html
@@ -65,5 +65,11 @@
 <footer>
 		<p> &copy; 2024 April Sharer.All rights reserved.</p>
 	</footer>
+		<script>
+    document.getElementById('hamburger').addEventListener('click', function() {
+      const nav = document.querySelector('nav');
+      nav.classList.toggle('active'); 
+    });
+  </script>
 </body> 
 </html>
