--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
   <footer>
     <p>&copy; 2024 The Outnumbered Momma. All rights reserved.</p>
   </footer>
+	<script>
+    document.getElementById('hamburger').addEventListener('click', function() {
+      const nav = document.querySelector('nav');
+      nav.classList.toggle('active'); 
+    });
+  </script>
 </body>
 </html>
 
