--- a/learningfun.html
+++ b/learningfun.html
@@ -134,7 +134,12 @@
  
   fetchTrivia();
 </script>
-
+<script>
+    document.getElementById('hamburger').addEventListener('click', function() {
+      const nav = document.querySelector('nav');
+      nav.classList.toggle('active'); 
+    });
+  </script>
 </body> 
 </html>
 
