--- a/moneysaving.html
+++ b/moneysaving.html
@@ -86,6 +86,12 @@
     });
   });
 </script>
+	<script>
+    document.getElementById('hamburger').addEventListener('click', function() {
+      const nav = document.querySelector('nav');
+      nav.classList.toggle('active'); 
+    });
+  </script>
 
 </body> 
 </html>
