--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@
   </header>  
 
 <nav>
-	<div class="hamburger" id="hamburger">&#9776;</div> <!-- Hamburger icon -->
+  <div class="hamburger" id="hamburger">&#9776;</div>
   <div class="nav-links" id="nav-links">
-    <a href="index.html" title="home">Home</a>  
+    <a href="index.html" title="home">Home</a>
     <a href="recipes.html" title="Family-Friendly Recipes">Recipes</a>
-    <a href="learningfun.html" title="Teach your child through play">Learning Activities</a>
-    <a href="moneysaving.html" title="Save $$$">Money-Saving Tips</a>
-    <a href="contact.html" title="Contact Us!">Contact</a>
-  </nav>
+    <a href="learningfun.html" title="Learning Activities">Learning Activities</a>
+    <a href="moneysaving.html" title="Money Saving Tips">Money Saving Tips</a>
+    <a href="contact.html" title="Contact">Contact</a>
+  </div>
+</nav>
+
 </head>
 <div id="container">
   <article>
