--- a/learningfun.html
+++ b/learningfun.html
@@ -16,7 +16,7 @@
 </header>	
 		
 <nav>
-  <div class="hamburger" id="hamburger">&#9776;</div> <!-- Hamburger icon -->
+  <div class="hamburger" id="hamburger">&#9776;</div>
   <div class="nav-links" id="nav-links">
     <a href="index.html" title="home">Home</a>
     <a href="recipes.html" title="Family-Friendly Recipes">Recipes</a>
@@ -25,6 +25,7 @@
     <a href="contact.html" title="Contact">Contact</a>
   </div>
 </nav>
+
 	
 <h3>Learning Activities</h3>	
 
