--- a/recipes.html
+++ b/recipes.html
@@ -15,14 +15,16 @@
 </header>	
 		
 <nav>
-	<div class="hamburger" id="hamburger">&#9776;</div> <!-- Hamburger icon -->
+  <div class="hamburger" id="hamburger">&#9776;</div>
   <div class="nav-links" id="nav-links">
-<a href="index.html" title="home">Home</a> 
-  <a href="recipes.html" title="Family-Friendly Recipes">Recipes</a>
-  <a href="learningfun.html" title="Learning Activities">Learning Activities</a>
-  <a href="moneysaving.html" title="Money Saving Tips">Money Saving Tips</a>
-  <a href="contact.html" title="Contact">Contact</a>
-</nav>	
+    <a href="index.html" title="home">Home</a>
+    <a href="recipes.html" title="Family-Friendly Recipes">Recipes</a>
+    <a href="learningfun.html" title="Learning Activities">Learning Activities</a>
+    <a href="moneysaving.html" title="Money Saving Tips">Money Saving Tips</a>
+    <a href="contact.html" title="Contact">Contact</a>
+  </div>
+</nav>
+
 
 	<h3>Fast Family-Friendly Recipes </h3>	
 
