flex box adjust

--- a/learningfun.html
+++ b/learningfun.html
@@ -29,56 +29,42 @@
 	
 <h3>Learning Activities</h3>	
 
-<div class="container">
-  <div class="item">
-    <img src="images/carwash.jpg" alt="Muddy Car Wash">
+<div class="recipe-container">
+  <div class="recipe-box">
+    <img src="images/carwash.jpg" alt="Muddy Car Wash" class="recipe-image">
 	  <h4>Muddy Car Wash</h4>
     <p>This is my go-to rainy day activity! All you need for this one is a spin-mop bucket, cocoa powder, 9x13 pan, and toy cars. To prep the activity just sprinkle cocoa powder on the bottom of your pan and stir in a tablespoon of water at a time to make this taste-safe mud your desired consistency. Then, fill your spin-mop bucket a quarter full of water and you're good to go. For this activity kids will practice fine motor skills and problem-solving by creating this open-ended muddy carwash for their toy cars. My boys race their cars in "mud" and then pass the car off to the "car washer" who dunks the dirty car in the mop bucket, and then spins it dry!</p>
   </div>
  
-  <div class="item">
-    <img src="images/shavingcream.jpg" alt="Shaving Cream Numbers">
+  <div class="recipe-box">
+    <img src="images/shavingcream.jpg" alt="Shaving Cream Numbers" class="recipe-image">
 	  <h4>Shaving Cream Numbers</h4>
-    <p>This is perfect for those kinesthetic learners! Grab a cheap can of shaving cream and a smooth table (preferably outdoors if the weather allows!). Ask your child to spread out their shaving cream on the table to create a canvas, and then quiz away! You can ask them to write the answer to math problems, practice writing numbers, or even make a certain number of shapes all by tracing with their finger into the shaving cream. The learning activities are endless!
-	  <br>
-	  <br>
-	  <br>
-	  <br>
-	  </p>
+    <p>This is perfect for those kinesthetic learners! Grab a cheap can of shaving cream and a smooth table (preferably outdoors if the weather allows!). Ask your child to spread out their shaving cream on the table to create a canvas, and then quiz away! You can ask them to write the answer to math problems, practice writing numbers, or even make a certain number of shapes all by tracing with their finger into the shaving cream. The learning activities are endless! <br> <br>
+	  <br></p>
   </div>
 	
-  <div class="item">
-    <img src="images/erase.jpg" alt="Erase">
+  <div class="recipe-box">
+    <img src="images/erase.jpg" alt="Erase" class="recipe-image">
 	  <h4>Erase game</h4>
     <p>This is another way to work on specific skill in a new and fun way! Based on what skill I'm practicing with my kids I will write (with a dry erase marker) sight words, letters, or numbers onto windows they can reach. I hand them a paper towel and ask them to erase a specific word, number, or letter. This is my favorite way to assess what letters/words they know to determine what we need to focus on at home- and the kids love it!</p>
   </div>
   
-  <div class="item">
-    <img src="images/lego.jpg" alt="Lego Zipliners">
+  <div class="recipe-box">
+    <img src="images/lego.jpg" alt="Lego Zipliners" class="recipe-image">
 	  <h4>Lego Zipliners</h4>
-    <p>This is a wonderful open-ended STEM activity, great for a wide range of ages! Just grab your legos, string, and tape for this one. Tape a string to a doorknob or table and tape the other end to the floor creating about a 30 degree angle. Ask your kids to create a lego design that allows their mini-fig to zoom down the zipline! 
-	  <br>
-	  <br>
-	  <br></p>
+    <p>This is a wonderful open-ended STEM activity, great for a wide range of ages! Just grab your legos, string, and tape for this one. Tape a string to a doorknob or table and tape the other end to the floor creating about a 30 degree angle. Ask your kids to create a lego design that allows their mini-fig to zoom down the zipline! <br> <br> </p>
   </div>
 
-  <div class="item">
-    <img src="images/lava.jpg" alt="Lava Lamp Fun">
+  <div class="recipe-box">
+    <img src="images/lava.jpg" alt="Lava Lamp Fun" class="recipe-image">
 	  <h4>Lava Lamp Fun</h4>
     <p>This fun science experiment will teach your child about chemical reactions and density. Grab any sized jar and fill it a little under halfway with water and food dye of choice. Next, fill up with oil leaving an inch of space at the top. At this stage, it is the perfect time to bring up why water and oil do not mix: differences in density. Now ask your child to place an Alka-Seltzer tablet into the jar and see what happens! The best part about this one is you can put the lid on your jar and save the liquids. Just add a new Alka-Seltzer tablet when you are ready to see the lava lamp move again.</p>
   </div>
 
-  <div class="item">
-    <img src="images/letterhunt.jpg" alt="Scavenger Hunt">
+  <div class="recipe-box">
+    <img src="images/letterhunt.jpg" alt="Scavenger Hunt" class="recipe-image">
 	  <h4>Letter Sound Scavenger Hunt</h4>
-    <p>This is one of my go-to's when I'm busy and my kids whine "I'm bored". Pick a letter (or color) and ask your child to find 5-10 things that start with a certain letter sound. You can give them a basket to collect these things, ask them to take pictures of them, or simply just ask them to point them out! This activity requires no supplies so it is a perfect activity to utilize when waiting somewhere.
-	   <br>
-	  <br>
-	  <br>
-	  <br>
-	  <br>
-		<br>
-	  </p>
+    <p>This is one of my go-to's when I'm busy and my kids whine "I'm bored". Pick a letter (or color) and ask your child to find 5-10 things that start with a certain letter sound. You can give them a basket to collect these things, ask them to take pictures of them, or simply just ask them to point them out! This activity requires no supplies so it is a perfect activity to utilize when waiting somewhere. <br> <br> <br></p>
   </div>
 </div>
 
