--- a/recipes.html
+++ b/recipes.html
@@ -25,45 +25,136 @@
   </div>
 </nav>
 
+<div class="recipe-container">
+    <div class="recipe-box">
+        <h3>Creamy Cajun Chicken</h3>
+		<img src="images/cajun chicken.jpg" alt="Cajun Chicken" class="recipe-image">
+        <h4>Ingredients:</h4>
+        <ul>
+            <li>Bag of Mini Sweet Peppers (chopped)</li>
+            <li>1lb of Chicken Tenders (uncooked)</li>
+            <li>12oz cream cheese spread</li>
+            <li>1tbs cajun seasoning</li>
+            <li>1/2 cup shredded cheddar cheese</li>
+        </ul>
+        <h4>Directions:</h4>
+        <ol>
+            <li>Preheat oven to 400.</li>
+            <li>Line a greased 9x13 with the chopped peppers.</li>
+            <li>Place Chicken on top of pepper layer.</li>
+            <li>Generously sprinkle the chicken tenders with cajun seasoning.</li>
+            <li>Top with small scoops of cream cheese on each chicken tender.</li>
+            <li>Sprinkle cheddar cheese on top of the tenders last.</li>
+            <li>Bake uncovered for 25 minutes, or until chicken is cooked fully.</li>
+        </ol>
+    </div>
 
-	<h3>Fast Family-Friendly Recipes </h3>	
+    <div class="recipe-box">
+        <h3>Everything Salmon</h3>
+		<img src="images/everything salmon.jpg" alt="Everything Salmon" class="recipe-image">
+        <h4>Ingredients:</h4>
+        <ul>
+            <li>4-5 uncooked Salmon Fillets</li>
+            <li>8oz cream cheese spread</li>
+            <li>1tbs everything but the bagel seasoning</li>
+        </ul>
+        <h4>Directions:</h4>
+        <ol>
+            <li>Preheat oven to 425.</li>
+            <li>Place salmon fillets on a parchment lined pan.</li>
+            <li>Top each fillet with cream cheese spread in an even layer.</li>
+            <li>Sprinkle each fillet with everything but the bagel seasoning.</li>
+            <li>Bake uncovered for 20 minutes, or until salmon is cooked fully.</li>
+        </ol>
+		
+    </div>
 
-<div class="container">
-  <div class="item">
-    <img src="images/cajun chicken.jpg" alt="5 Ingredient Cajun Chicken">
-	  <h4>5 Ingredient Cajun Chicken</h4>
-    <p>This is my go-to rainy day activty! All you need for this one is a spin-mop bucket, cocoa powder, 9x13 pan, and toy cars. To prep the activity just sprinkle cocoa powder on the bottom of your pan and stir in a tablespoon of water at a time to make this taste-safe mud your desired consistency. Then, fill your spin-mop bucket a quarter full of water and you're good to go. For this activity kids will practice fine motor skills and problem solving by creating this open-ended muddy carwash for their toy cars. My boys race their cars in "mud" and then pass the car off to the "car washer" who dunks the dirty car in the mop bucket, and then spins it dry!</p>
-  </div>
- 
-  <div class="item">
-	  
-    <img src="images/everything salmon.jpg" alt="Everything Salmon">
-	  <h4>Everything Salamon</h4>
-    <p>This is hands-down been the most impactful way to cut down my family's spending. Having a meal plan each week helps you only buy what you need at the grocery store, and avoid eating out just out of desperation. Now don't get me wrong, I love the experience of eating out with my family and trying something new, but desperately stopping at Chic-Fil-A because there's nothing to cook at home, adds up quick. Having a meal plan for each week is a great strategy to save money at the grocery store, and avoid unnecessary spending.Plan your resturant visits intentially for the experience, not out of desperation!</p>
-  </div>
-	 <div class="item">
-		 <img src="images/queso chicken.jpg" alt="Burito Bowls">
-		 <h4>Burito Bowls</h4>
-    <p>Once you’ve mastered your monthly budget, you can take advantage of a cashback or rewards credit card. Many cards offer 2% or more back on all purchases! I personally use my credit card bills to fund all of my Amazon purchases, since I can use my credit card points to buy. Only do this if you are sure you can pay off the balance each month, because interest rates are way too high!&nbsp;&nbsp;&nbsp;&nbsp;</p>
-  </div>
-  <div class="item">
-	  <img src="images/salad.jpg" alt="Chinese Chicken Salad">
-	  <h4>Chinese Chicken Salad</h4>
-    
-    <p>Whether you primarily use a debit card, or credit card- check your accounts often. This will help you monitor your spending, and identify subscriptions you may want to cancel. It is also a great way to catch fraudulent behavior early on. I like to check my accounts weekly to make sure I’m on track to stay on budget for the month.If I'm overspending, I need to know while there is still time in the month to adjust! </p>
-  </div>
-  <div class="item">
-	  
-    <img src="images/monteray.jpg" alt="Southwest Monterays">
-	  <h4>Southwest Monterays</h4>
-    <p>When was the last day that you didn’t make a single purchase? Having online shopping at our fingertips makes it tempting to buy something as soon as we think of it. What if you just left it in your cart and re-evaluated at the end of the week? Start off with one day a week that you won’t need to make any essential purchases and go the whole day without spending. Challenge yourself to increase your number of “no-spend” days per month. </p>
-  </div>
+    <div class="recipe-box">
+        <h3>Burito Bowls</h3>
+		<img src="images/queso chicken.jpg" alt="Burito Bowls" class="recipe-image">
+        <h4>Ingredients:</h4>
+        <ul>
+            <li>1lb of Chicken Tenders (uncooked)</li>
+            <li>8oz of store bought queso of choice</li>
+            <li>1 bag of Birds Eye Power Blend (Southwest Style)</li>
+            <li>Diced avocado (optional)</li>
+            <li>Shredded Mexican Cheese (optional)</li>
+            <li>Pico de gallo (optional)</li>
+        </ul>
+        <h4>Directions:</h4>
+        <ol>
+            <li>Place chicken tenders in a crockpot with 1 cup chicken broth, cook on low for 6 hours.</li>
+            <li>Shred chicken in the crockpot, soak in remaining broth for 5 minutes, then drain excess broth.</li>
+            <li>Add queso to the shredded chicken in the crockpot, and set to high for 5 minutes.</li>
+            <li>Meanwhile, prepare the power blend veggie rice mix according to package instructions.</li>
+            <li>Layer each bowl with rice mix, queso chicken mix, and top with cheese, pico de gallo, and avocado.</li>
+        </ol>
+	</div>
+  
+
+    <div class="recipe-box">
+        <h3>Southwest Monterays</h3>
+		<img src="images/monteray.jpg" alt="Southwest Monterays" class="recipe-image">
+        <h4>Ingredients:</h4>
+        <ul>
+            <li>1lb ground beef</li>
+            <li>1 can refried beans</li>
+            <li>1 cup enchilada sauce</li>
+            <li>1 taco seasoning packet</li>
+            <li>1 package of tostadas</li>
+            <li>Topping ideas: shredded lettuce, tomatoes, shredded cheese, sour cream</li>
+        </ul>
+        <h4>Directions:</h4>
+        <ol>
+            <li>Cook ground beef and drain.</li>
+            <li>Mix in refried beans, taco seasoning, and enchilada sauce in a pan on medium heat for 3 minutes.</li>
+            <li>Heat tostadas according to package instructions.</li>
+            <li>Top heated tostadas with meat/bean mixture, shredded cheese, lettuce, and diced tomatoes.</li>
+        </ol>
+    </div>
+
+    <div class="recipe-box">
+        <h3>Mickey Mouse Pancakes</h3>
+		<img src="images/pancake.jpg" alt="Mickey Mouse Pancakes" class="recipe-image">
+        <h4>Ingredients:</h4>
+        <ul>
+            <li>1 cup all-purpose flour</li>
+            <li>2 tbs white sugar</li>
+            <li>2 tsp baking powder</li>
+            <li>Pinch of salt</li>
+            <li>1 cup milk</li>
+            <li>2 tbs oil</li>
+            <li>1 egg</li>
+            <li>Chocolate chips</li>
+        </ul>
+        <h4>Directions:</h4>
+        <ol>
+            <li>Combine dry ingredients and stir well.</li>
+            <li>Add oil, milk, and egg, mix until smooth.</li>
+            <li>Heat skillet with 1 tbs of butter or oil on medium-high heat.</li>
+            <li>Pour one large circle in the center of the pan, followed by two smaller circles for ears.</li>
+            <li>Place chocolate chips in a smiley face on the batter before flipping.</li>
+            <li>Flip pancake and cook until both sides are golden.</li>
+        </ol>
+    </div>
 	
-	 <div class="item">
-    <img src="images/pancake.jpg" alt="Pancakes">
-	  <h4>Mickey Mouse Pancakes</h4>
-    <p>Stop wasting money on buying brand new everything. Check out your local thrift store and you might be amazed with all the great finds that cost a fraction of what you would regulary spend. This does not just apply to clothes, the next time you're out shopping for something check the thrift store first!The satisfaction of a good find is such a great feeling. The environment, and your wallet will thank you!</p>
-  </div>
+    <div class="recipe-box">
+        <h3>Chinese Chicken Salad</h3>
+		<img src="images/salad.jpg" alt="Salad" class="recipe-image">
+        <h4>Ingredients:</h4>
+        <ul>
+            <li>1 bag of shredded cabbage or broccoli slaw</li>
+            <li>1 bag of wonton strips</li>
+            <li>1 rotisserie chicken, deboned and shredded</li>
+            <li>Sesame Ginger Dressing</li>
+        </ul>
+        <h4>Directions:</h4>
+        <ol>
+            <li>Combine chicken and cabbage in a large salad bowl.</li>
+            <li>Toss in desired amount of Sesame Ginger Dressing.</li>
+            <li>Top each bowl of salad generously with wonton strips.</li>
+        </ol>
+    </div>
 </div>
 
 <footer>
