--- a/moneysaving.html
+++ b/moneysaving.html
@@ -33,39 +33,42 @@
 
 <h3>Money Saving Tips</h3>	
 
-<div class="container">
-  <div class="item">
-    <img src="images/snacks.jpg" alt="Snacks">
+<div class="recipe-container">
+  <div class="recipe-box">
+    <img src="images/snacks.jpg" alt="Snacks" class="recipe-image">
 	  <h4>Save Money on Snacks</h4>
     <p>My boys go through snacks fast, and it use to take up a large portion of my grocery bill. I love the convience of prepackaged snacks, easpecially for packing in backpacks, but for $6 for an 8-pack of pretzel bags- no thank you! I can make 12-packs of pretzels from a $2 bag of pretzels. Now I know what you might be thinking, "I don't have time for that". I get it, it's an extra hassle, but would you take on a simple job that paid $10 for 10 minutes of work? Buying snacks in full sized packaging and creating your own snack packs can save you serious money. You could even try asking your kids to package the snacks for you the next time you hear, "I'm bored"&#128540  </p>
   </div>
  
-  <div class="item">
+  <div class="recipe-box">
 	  
-    <img src="images/grocery.jpg" alt="Meal Plan">
+    <img src="images/grocery.jpg" alt="Meal Plan" class="recipe-image">
 	  <h4>Meal Plan</h4>
-    <p>This is hands-down been the most impactful way to cut down my family's spending. Having a meal plan each week helps you only buy what you need at the grocery store, and avoid eating out just out of desperation. Now don't get me wrong, I love the experience of eating out with my family and trying something new, but desperately stopping at Chic-Fil-A because there's nothing to cook at home, adds up quick. Having a meal plan for each week is a great strategy to save money at the grocery store, and avoid unnecessary spending.Plan your resturant visits intentially for the experience, not out of desperation!</p>
+    <p>This is hands-down been the most impactful way to cut down my family's spending. Having a meal plan each week helps you only buy what you need at the grocery store, and avoid eating out just out of desperation. Now don't get me wrong, I love the experience of eating out with my family and trying something new, but desperately stopping at Chic-Fil-A because there's nothing to cook at home, adds up quick. Having a meal plan for each week is a great strategy to save money at the grocery store, and avoid unnecessary spending.Plan your resturant visits intentially for the experience, not out of desperation!
+		<br>
+	  <br>
+	  </p>
   </div>
-	 <div class="item">
-		 <img src="images/elf.jpg" alt="Rewards">
+	 <div class="recipe-box">
+		 <img src="images/elf.jpg" alt="Rewards" class="recipe-image">
 		 <h4>Use Cashback and Rewards</h4>
-    <p>Once you’ve mastered your monthly budget, you can take advantage of a cashback or rewards credit card. Many cards offer 2% or more back on all purchases! I personally use my credit card bills to fund all of my Amazon purchases, since I can use my credit card points to buy. Only do this if you are sure you can pay off the balance each month, because interest rates are way too high!&nbsp;&nbsp;&nbsp;&nbsp;</p>
+    <p>Once you’ve mastered your monthly budget, you can take advantage of a cashback or rewards credit card. Many cards offer 2% or more back on all purchases! I personally use my credit card bills to fund all of my Amazon purchases, since I can use my credit card points to buy. Only do this if you are sure you can pay off the balance each month, because interest rates are way too high!</p>
   </div>
-  <div class="item">
-	  <img src="images/box.jpg" alt="Look at Your Statements Often">
+  <div class="recipe-box">
+	  <img src="images/box.jpg" alt="Look at Your Statements Often" class="recipe-image">
 	  <h4>Check your Statements Often!</h4>
     
     <p>Whether you primarily use a debit card, or credit card- check your accounts often. This will help you monitor your spending, and identify subscriptions you may want to cancel. It is also a great way to catch fraudulent behavior early on. I like to check my accounts weekly to make sure I’m on track to stay on budget for the month.If I'm overspending, I need to know while there is still time in the month to adjust! </p>
   </div>
-  <div class="item">
+  <div class="recipe-box">
 	  
-    <img src="images/fixcar.jpg" alt="No Spend Days">
+    <img src="images/fixcar.jpg" alt="No Spend Days" class="recipe-image">
 	  <h4>"No Spend Days"</h4>
     <p>When was the last day that you didn’t make a single purchase? Having online shopping at our fingertips makes it tempting to buy something as soon as we think of it. What if you just left it in your cart and re-evaluated at the end of the week? Start off with one day a week that you won’t need to make any essential purchases and go the whole day without spending. Challenge yourself to increase your number of “no-spend” days per month. </p>
   </div>
 	
-	 <div class="item">
-    <img src="images/thrift.jpg" alt="Be Thrifty">
+	 <div class="recipe-box">
+    <img src="images/thrift.jpg" alt="Be Thrifty" class="recipe-image">
 	  <h4>Be Thrifty</h4>
     <p>Stop wasting money on buying brand new everything. Check out your local thrift store and you might be amazed with all the great finds that cost a fraction of what you would regulary spend. This does not just apply to clothes, the next time you're out shopping for something check the thrift store first!The satisfaction of a good find is such a great feeling. The environment, and your wallet will thank you!</p>
   </div>
