--- a/recipes.html
+++ b/recipes.html
@@ -57,6 +57,7 @@
             <li>4-5 uncooked Salmon Fillets</li>
             <li>8oz cream cheese spread</li>
             <li>1tbs everything but the bagel seasoning</li>
+			<br>
         </ul>
         <h4>Directions:</h4>
         <ol>
@@ -65,6 +66,8 @@
             <li>Top each fillet with cream cheese spread in an even layer.</li>
             <li>Sprinkle each fillet with everything but the bagel seasoning.</li>
             <li>Bake uncovered for 20 minutes, or until salmon is cooked fully.</li>
+			<li>Serve with baked potato, grilled veggies, or rice.</li>
+			<li>Enjoy!</li>
         </ol>
 		
     </div>
@@ -110,6 +113,8 @@
             <li>Mix in refried beans, taco seasoning, and enchilada sauce in a pan on medium heat for 3 minutes.</li>
             <li>Heat tostadas according to package instructions.</li>
             <li>Top heated tostadas with meat/bean mixture, shredded cheese, lettuce, and diced tomatoes.</li>
+			<li>Enjoy!</li>
+			<br>
         </ol>
     </div>
 
@@ -147,12 +152,19 @@
             <li>1 bag of wonton strips</li>
             <li>1 rotisserie chicken, deboned and shredded</li>
             <li>Sesame Ginger Dressing</li>
+			<br>
+			<br>
+			<br>
+			<br>
         </ul>
         <h4>Directions:</h4>
         <ol>
             <li>Combine chicken and cabbage in a large salad bowl.</li>
             <li>Toss in desired amount of Sesame Ginger Dressing.</li>
             <li>Top each bowl of salad generously with wonton strips.</li>
+			<li>Enjoy!</li>
+			<br>
+			<br>
         </ol>
     </div>
 </div>
