--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,8 @@
 
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required><br><br>
-			<label for="email">Phone:</label>
-            <input type="email" id="contact" name="email" required><br><br>
+			<label for="phone">Phone:</label>
+            <input type="phone" id="contact" name="phone" required><br><br>
 
             <label>Preferred Contact Method:</label><br>
             <input type="radio" id="phone" name="contact-method" value="phone">
