--- a/recipes.html
+++ b/recipes.html
@@ -6,6 +6,9 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Satisfy&family=Thasadith:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="styles.css">
+	href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
   <title>Welcome to Outnumbered Momma!</title>
 </head>
 <body>
@@ -74,7 +77,7 @@
     </div>
 
     <div class="recipe-box">
-        <h3>Burito Bowls</h3>
+        <h3>Burrito Bowls</h3>
 		<img src="images/queso chicken.jpg" alt="Burito Bowls" class="recipe-image">
         <h4>Ingredients:</h4>
         <ul>
